--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">COUPLES WHO LAUGH TOGETHER</h3>
                             </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
+<!--                             <button type="button" class="btn-play mx-auto" data-toggle="modal"
                                 data-src="" data-target="#videoModal">
                                 <span></span>
-                            </button>
+                            </button> -->
                         </div>
                     </div>
                 </div>
@@ -86,10 +86,10 @@
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">LAST TOGETHER</h3>
                             </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
+<!--                             <button type="button" class="btn-play mx-auto" data-toggle="modal"
                                 data-src="" data-target="#videoModal">
                                 <span></span>
-                            </button>
+                            </button> -->
                         </div>
                     </div>
                 </div>
